--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <figcaption>Listen to "Gravity" by EXO:</figcaption>
             <audio
                    controls
-                   src="/Gravity.mp3">
+                   src="https://raw.githubusercontent.com/lxgai/110-Lab2/master/Gravity.mp3">
                       Your browser does not support the
                       <code>audio</code> element.
             </audio>
