--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
             <li>Code Geass</li>
           </ul>
           
+          <video controls width="350">
+            <source src="https://raw.githubusercontent.com/lxgai/110-Lab2/master/haikyuu.mp4"
+                    type="video/mp4">
+
+            Sorry, your browser doesn't support embedded videos.
+          </video>
+          
           <p>
             Here are some navigation links to anime sites and recommendation lists if you are interested in binging some anime shows.
           </p>
