--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       
       <p>Welcome to my page.</p>
       
-      <div class="quote">
+      <div class="quote" id="pierre">
         <p> 
           <i>"We have technology, finally, that for the first time in human history allows people to really maintain rich connections with much larger numbers of people."</i> -Pierre Omidyar
         </p>
