--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             </datalist>
              <br>
           
-            <div class="travel-form">
+            <div>
               <label for="place">What other place would you like to travel to: </label>
               <input type="text" name="place" id="place" required>
             </div>
@@ -288,7 +288,7 @@
              </textarea>
              <br>
             
-            <div class="travel-form">
+            <div>
               <input type="submit" value="Submit">
             </div>
              <br>
