--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Lucy's User Page</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Yusei+Magic&display=swap" rel="stylesheet">
   </head>
   <body>
     <main>
