--- a/index.html
+++ b/index.html
@@ -198,17 +198,17 @@
          
            <div class="grid-container">
             <div class="grid1">
-              <p>Some place in Seoul:</p>
+              <p class="grid1">Some place in Seoul:</p>
             </div>
             <div class="grid2">
-              <iframe id="Seoul" title="Seoul" width="300" height="300" src="https://www.openstreetmap.org/export/embed.html?bbox=126.9569778442383%2C37.54789484984001%2C126.97706222534181%2C37.55891819329401&amp;layer=mapnik">
+              <iframe class="grid2" id="Seoul" title="Seoul" width="300" height="300" src="https://www.openstreetmap.org/export/embed.html?bbox=126.9569778442383%2C37.54789484984001%2C126.97706222534181%2C37.55891819329401&amp;layer=mapnik">
 </iframe>
             </div>
             <div class="grid3">
-              <img src="https://pbs.twimg.com/profile_images/378800000119790556/609fb572df62b67d97608e288781840c.jpeg">
+              <img src="https://pbs.twimg.com/profile_images/378800000119790556/609fb572df62b67d97608e288781840c.jpeg" class="grid3">
             </div>
             <div class="grid4">
-              <img src="https://cdn140.picsart.com/238665662070202.jpg?type=webp&to=crop&r=256">
+              <img src="https://cdn140.picsart.com/238665662070202.jpg?type=webp&to=crop&r=256" class="grid4">
             </div>
           </div>
           
