Add closing tag for div grid

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
             <div class="grid4">
               <img src="https://cdn140.picsart.com/238665662070202.jpg?type=webp&to=crop&r=256" class="grid4">
             </div>
+          </div>
           
           <figure>
             <img src="https://photos.smugmug.com/Kyoto/Kyoto-Romantic-Cherry-Blossom-Itinerary/i-dQdfWJD/0/4575e10a/L/shutterstock_1017748132-L.jpg" alt="Japan">
